--- a/SUDLife_Aadarsh/SUDLife_Aadarsh.csproj
+++ b/SUDLife_Aadarsh/SUDLife_Aadarsh.csproj
@@ -7,11 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Components.QuickGrid.EntityFrameworkAdapter" Version="8.0.4" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.4" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.2" />
     <PackageReference Include="RestSharp" Version="111.1.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\SUDLife_CallThirdPartyAPI\SUDLife_CallThirdPartyAPI.csproj" />
+    <ProjectReference Include="..\SUDLife_SecruityMechanism\SUDLife_SecruityMechanism.csproj" />
   </ItemGroup>
 
 </Project>
