Implemented JWT Authentication and SeriLog

--- a/SUDLife_DBConnection/appsettings.json
+++ b/SUDLife_DBConnection/appsettings.json
@@ -1,12 +1,12 @@
 {
+  "ConnectionStrings": {
+    "ConnectionString": "Data Source=(localDb)\\MSSqlLocalDb;Initial Catalog=DbPartner; Integrated Security=True;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "ConnectionString": ""
-  }
+  "AllowedHosts": "*"
 }
