--- a/SUDLife_CallThirdPartyAPI/SUDLife_CallThirdPartyAPI.csproj
+++ b/SUDLife_CallThirdPartyAPI/SUDLife_CallThirdPartyAPI.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="RestSharp" Version="111.1.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
   </ItemGroup>
 
 </Project>
