--- a/SUDLife_Aadarsh/appsettings.Development.json
+++ b/SUDLife_Aadarsh/appsettings.Development.json
@@ -7,27 +7,43 @@
     "Env": "Dev"
   },
   "Serilog": {
-    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
-    "MinimumLevel": {
-      "Default": "Information",
-      "Override": {
-        "Microsoft": "Warning",
-        "System": "Warning"
-      }
-    },
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.MSSqlServer" ],
+    "MinimumLevel": "Information",
     "WriteTo": [
       { "Name": "Console" },
       {
-        "Name": "File",
+        "Name": "MSSqlServer",
         "Args": {
-          "path": "logs/log-.txt",
-          "rollingInterval": "Day"
+          "connectionString": "Data Source=(localDb)\\MSSqlLocalDb;Initial Catalog=DbPartner; Integrated Security=True;TrustServerCertificate=True",
+          "tableName": "Logs",
+          "autoCreateSqlTable": true,
+          "columnOptionsSection": {
+            "additionalColumns": [
+              {
+                "ColumnName": "EncryptedRequest",
+                "DataType": "nvarchar"
+              },
+              {
+                "ColumnName": "PlainRequest",
+                "DataType": "nvarchar"
+              },
+              {
+                "ColumnName": "PlainResponse",
+                "DataType": "nvarchar"
+              },
+              {
+                "ColumnName": "EncryptedResponse",
+                "DataType": "nvarchar"
+              }
+            ]
+          }
         }
       }
     ],
-    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
-    "Properties": {
-      "Application": "MyApplication"
-    }
+    "Enrich": [ "FromLogContext" ]
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(localDb)\\MSSqlLocalDb;Initial Catalog=DbPartner; Integrated Security=True;TrustServerCertificate=True"
   }
 }
+
