Adarsh Controller Update

--- a/SUDLife_Authentication/SUDLife_Authentication.csproj
+++ b/SUDLife_Authentication/SUDLife_Authentication.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SUDLife_DataRepo\SUDLife_DataRepo.csproj" />
+  </ItemGroup>
+
 </Project>
